<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F0D0"
    tools:context=".ui.semantic_recognition.SemanticRecognitionFragment">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="111dp"
        android:layout_height="99dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/img"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toTopOf="@+id/upload_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_border"
        android:backgroundTint="#945D4C"
        android:text="@string/camera_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_border"
        android:backgroundTint="#945D4C"
        android:text="@string/upload_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <EditText
        android:id="@+id/text_ocr"
        android:layout_width="339dp"
        android:layout_height="106dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:padding="16dp"
        android:background="@drawable/textview_border"
        android:gravity="top|start"
        android:hint="@string/ocr_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:overScrollMode="always"
        android:scrollbars="vertical"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_button" />

    <Button
        android:id="@+id/re_orc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textview_border"
        android:backgroundTint="#945D4C"
        android:text="@string/re_ocr"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_ocr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_button"
        app:layout_constraintVertical_bias="0.952" />

    <TextView
        android:id="@+id/title_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/return_ans"
        android:textColor="#431608"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/text_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ocr" />

    <TextView
        android:id="@+id/title_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/title_ocr"
        android:textColor="#431608"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/text_ocr"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/predict_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/textview_border"
        android:backgroundTint="#945D4C"
        android:text="@string/title_0"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_return"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/text_return"
        android:layout_width="339dp"
        android:layout_height="94dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/textview_border"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text2" />

    <Button
        android:id="@+id/show_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/textview_border"
        android:backgroundTint="#945D4C"
        android:text="@string/log_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_return"
        app:layout_constraintVertical_bias="0.25" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_history_button" />

</androidx.constraintlayout.widget.ConstraintLayout>