<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F0D0"
    tools:context=".ui.line_id_search.LineIdSearchFragment">

    <EditText
        android:id="@+id/line_id_textbox"
        android:layout_width="328dp"
        android:layout_height="51dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="abc"
        android:hint="@string/title_1"
        android:inputType="text"
        android:textColor="#431608"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_id_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:backgroundTint="#945D4C"
        android:background="@drawable/textview_border"
        android:text="@string/search_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_id_textbox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_id_return"
        android:layout_width="339dp"
        android:layout_height="96dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="163dp"
        android:background="@drawable/textview_border"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="12dp"
        android:text="@string/return_ans"
        android:textColor="#431608"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/text_id_return"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/show_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#945D4C"
        android:background="@drawable/textview_border"
        android:text="@string/log_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_id_return" />

</androidx.constraintlayout.widget.ConstraintLayout>